--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5"
   }
 }
