--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "tabWidth": 4,
-    "useTabs": true,
-    "semi": true
-  }
-  
+  "semi": true,
+  "singleQuote": false,
+  "printWidth": 120,
+  "useTabs": true,
+  "tabWidth": 4
+}
