--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
-  "name": "first",
-  "version": "1.0.0",
-  "description": "Nodejs Express JS OOPS project for practice",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Surendar-Kuppusamy/NodeJS-OOPS.git"
-  },
-  "author": "Surendar Kuppusamy",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Surendar-Kuppusamy/NodeJS-OOPS/issues"
-  },
-  "homepage": "https://github.com/Surendar-Kuppusamy/NodeJS-OOPS#readme",
-  "dependencies": {
-    "@types/express": "^4.17.21",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-session": "^1.18.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5"
-  }
+	"name": "first",
+	"version": "1.0.0",
+	"description": "Nodejs Express JS OOPS project for practice",
+	"main": "index.js",
+	"scripts": {
+		"lint": "eslint . --ext .ts",
+		"lint:fix": "eslint . --ext .ts --fix",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"lint-staged": {
+		"*.ts": [
+			"eslint",
+			"git add"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Surendar-Kuppusamy/NodeJS-OOPS.git"
+	},
+	"author": "Surendar Kuppusamy",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Surendar-Kuppusamy/NodeJS-OOPS/issues"
+	},
+	"homepage": "https://github.com/Surendar-Kuppusamy/NodeJS-OOPS#readme",
+	"dependencies": {
+		"@types/express": "^4.17.21",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"express-session": "^1.18.0"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.2",
+		"prettier": "^3.2.5"
+	}
 }
